unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Show_Alert_For_NonZero_WeekendHours__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Alert_For_NonZero_WeekendHours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Given config is used to show alert if non zero value in entered on the schedule grid section for the day having zero hours in the selected Resource work calendar days pattern.</description>
    <inlineHelpText>Given config is used to show alert if non zero value in entered on the schedule grid section for the day having zero hours in the selected Resource work calendar days pattern.</inlineHelpText>
    <label>Show Alert For NonZero WeekendHours</label>
    <type>Checkbox</type>
</CustomField>