unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Show_Easy_Entry_Popup__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Easy_Entry_Popup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the easy entry popup appears on the Time Entry page when you double-click an editable hour cell on a timecard row or press the DOWN ARROW key while that cell is selected.</description>
    <inlineHelpText>Indicates whether the easy entry popup appears on the Time Entry page when you double-click an editable hour cell on a timecard row or press the DOWN ARROW key while that cell is selected.</inlineHelpText>
    <label>Show Easy Entry Popup</label>
    <type>Checkbox</type>
</CustomField>