unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Show_Milestone_As_Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Milestone_As_Field__c</fullName>
    <description>Contains field whose value will be shown on timecard UI milestone drop down list.   If these are missing/null, the TC UI just continues to show the Milestone name fields of the available Milestones in the drop-down list.  No lookup __r references are supported, only fields directly on the Milestone can be used.</description>
    <inlineHelpText>Contains field whose value will be shown on TC UI milestone drop down list.   If these are missing/null, the TC UI just continues to show the Milestone name fields of the available Milestones in the drop-down list.  No lookup __r references are supp</inlineHelpText>
    <label>Show Milestone As Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>