unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Show_schedule_grid__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_schedule_grid__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, schedule grid section will show on timecard ui else not</description>
    <inlineHelpText>If true, schedule grid section will show on timecard ui else not</inlineHelpText>
    <label>Show schedule grid</label>
    <type>Checkbox</type>
</CustomField>