unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Show_Schedule_Grid_Expanded_By_Default__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Schedule_Grid_Expanded_By_Default__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked, means schedule grid will be shown expanded on Timecard entry by default.</description>
    <inlineHelpText>Checked, means schedule grid will be shown expanded on Timecard entry by default.</inlineHelpText>
    <label>Show Schedule Grid Expanded By Default</label>
    <type>Checkbox</type>
</CustomField>