unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Show_timecard_etc__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_timecard_etc__c</fullName>
    <defaultValue>true</defaultValue>
    <description>config to show or hide etc field</description>
    <inlineHelpText>config to show or hide etc field</inlineHelpText>
    <label>Show timecard etc</label>
    <type>Checkbox</type>
</CustomField>