unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Show_timecard_methodology__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_timecard_methodology__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, timecard methodology field will be show on timecard UI.</description>
    <inlineHelpText>If true, timecard methodology field will be show on timecard UI.</inlineHelpText>
    <label>Show timecard methodology</label>
    <type>Checkbox</type>
</CustomField>