unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Show_timecard_milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_timecard_milestone__c</fullName>
    <defaultValue>true</defaultValue>
    <description>config to show or hide milestone select list</description>
    <inlineHelpText>config to show or hide milestone select list</inlineHelpText>
    <label>Show timecard milestone</label>
    <type>Checkbox</type>
</CustomField>