unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Show_Travel__c.field-meta.xml
<CustomField>
    <fullName>pse__Show_Travel__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the Travel checkboxes on the new timecard UI are to be displayed. The default value is true.</description>
    <inlineHelpText>Indicates whether the Travel checkboxes on the new timecard UI are to be displayed. The default value is true.</inlineHelpText>
    <label>Show Travel</label>
    <type>Checkbox</type>
</CustomField>