unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Task_Statuses_To_Hide__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Statuses_To_Hide__c</fullName>
    <description>Specifies tasks to hide when pre-populating in Timecards unless they have associated time logged.  The value is a comma-separated list of statuses.</description>
    <inlineHelpText>Specifies tasks to hide when pre-populating in Timecards unless they have associated time logged.  The value is a comma-separated list of statuses.</inlineHelpText>
    <label>Task Statuses To Hide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>