unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Task_Time_Entry_Assignment_Filter__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Time_Entry_Assignment_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the resource can only select tasks that they have an assignment for when entering time against project tasks. When this option is not selected, users can enable this feature on the Time Entry page.</inlineHelpText>
    <label>Task Time: Only show assigned tasks.</label>
    <type>Checkbox</type>
</CustomField>