unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Task_Time_Entry_Date_Filter__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Time_Entry_Date_Filter__c</fullName>
    <defaultValue>"None"</defaultValue>
    <inlineHelpText>Defines the filtering behavior on task dates when choosing tasks to enter time against. Set to None or Overlap. If None, no filtering occurs. If Overlap, tasks are listed only when the timecard and selectable tasks have some overlap on dates.</inlineHelpText>
    <label>Task Time: Filter task dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>