unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Task_Time_Entry_Mode__c.field-meta.xml
<CustomField>
    <fullName>pse__Task_Time_Entry_Mode__c</fullName>
    <defaultValue>"Current"</defaultValue>
    <description>The time entry mode to use when entering task time for a timecard row. You can choose one of these values: Adjust up, Current, Calculated, or Freeform. The default value is Current.</description>
    <inlineHelpText>The time entry mode to use when entering task time for a timecard row. You can choose one of these values: Adjust up, Current, Calculated, or Freeform. The default value is Current.</inlineHelpText>
    <label>Task Time Entry Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>