unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__TC_Header_Row_Editable_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__TC_Header_Row_Editable_Fieldset_Name__c</fullName>
    <defaultValue>'TimeCard_Header_Row_Editable'</defaultValue>
    <description>API name of a field set used by the Timecard object. Fields in this field set define the editable fields in the timecard header line in the Timecard UI.</description>
    <inlineHelpText>API name of a field set used by the Timecard object. Fields in this field set define the editable fields in the timecard header line in the Timecard UI.</inlineHelpText>
    <label>TC Header Row Editable Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>