unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__TC_HeaderRow_Left_Editable_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__TC_HeaderRow_Left_Editable_Fieldset_Name__c</fullName>
    <description>API name of a field set used by the Timecard object. Fields in this field set define the editable fields shown to the left of Hours in the timecard header line of the Timecard UI.</description>
    <inlineHelpText>API name of a field set used by the Timecard object. Fields in this field set define the editable fields shown to the left of Hours in the timecard header line of the Timecard UI.</inlineHelpText>
    <label>TC HeaderRow Left Editable Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>