unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__TC_Notes_Field_Editable_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__TC_Notes_Field_Editable_Fieldset_Name__c</fullName>
    <defaultValue>'TimeCard_Notes_Field_Editable'</defaultValue>
    <description>API name of a field set used by the Timecard object. Fields in this field set define editable fields in the Notes section in timecard lines in the Timecard UI.</description>
    <inlineHelpText>API name of a field set used by the Timecard object. Fields in this field set define editable fields in the Notes section in timecard lines in the Timecard UI.</inlineHelpText>
    <label>TC Notes Field Editable Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>