unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__TC_Status_To_Hide__c.field-meta.xml
<CustomField>
    <fullName>pse__TC_Status_To_Hide__c</fullName>
    <description>Field is used to hold coma (,) separated list of timecard status values that will be hide on the TC UI.</description>
    <inlineHelpText>Field is used to hold coma (,) separated list of timecard status values that will be hide on the TC UI.</inlineHelpText>
    <label>TC Status To Hide</label>
    <length>200</length>
    <type>Text</type>
</CustomField>