unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Top_assignment_to_show_count__c.field-meta.xml
<CustomField>
    <fullName>pse__Top_assignment_to_show_count__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Number of top assignments to be loaded to show on Project/assignment overlay</description>
    <inlineHelpText>Number of top assignments to be loaded to show on Project/assignment overlay</inlineHelpText>
    <label>Top assignment to show count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>