unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Top_assignment_week_load_limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Top_assignment_week_load_limit__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Number of weeks for which top assignments/projects to loaded to show on project/assignment overlay</description>
    <inlineHelpText>Number of weeks for which top assignments/projects to loaded to show on project/assignment overlay</inlineHelpText>
    <label>Top_assignment_week_load_limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>