unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Use_assignment_id__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_assignment_id__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if an assignment id should be used while displaying assignments on the time card page</description>
    <inlineHelpText>Indicates if an assignment id should be used while displaying assignments on the time card page</inlineHelpText>
    <label>Use assignment id</label>
    <type>Checkbox</type>
</CustomField>