unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Weekend_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>pse__Weekend_Color_Code__c</fullName>
    <description>Given field/config is used to color code Scheduled 0-hour days. On a typical 8-hour/5-day schedule, this would be the weekend days, Saturday and Sunday, but this would work for any days that are explicitly 0 hours in the Schedule Pattern (not Holidays) on the selected Resource's Work Calendar. Customers could set this to a color (could be different than any color chosen for Holidays) and the date-column heading would be color-coded in the same way, with a legend off to the right showing.</description>
    <inlineHelpText>Given field/config is used to color code the date-column heading for Scheduled 0-hour days as per the Schedule Pattern (not Holidays) on the selected Resource's Work Calendar.</inlineHelpText>
    <label>Weekend Color Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>