unpackaged/main/default/objects/pse__Timecard_Entry_UI_Personal__c/fields/pse__Width_px_for_project_assig_drop_down__c.field-meta.xml
<CustomField>
    <fullName>pse__Width_px_for_project_assig_drop_down__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Controls the pixel width for Project/Assignment dropdown on Timecard Entry UI. Please specify a whole number for this value, as this will directly go into width. For ex a value 300 will set the dropdown width to 300px.</description>
    <inlineHelpText>Controls the pixel width for Project/Assignment dropdown on Timecard Entry UI. Please specify a whole number for this value, as this will directly go into width. For ex a value 300 will set the dropdown width to 300px.</inlineHelpText>
    <label>Width px for project assig drop down</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>